# EDCeleb

./: .gitignore  editor.py  main.py  pyproject.toml
tests/: test_edceleb.py
