[tool.poetry]
name = "EDCeleb"
version = "0.1.0"
description = ""
authors = ["stasfr <stas240600@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.3.0"
pyTelegramBotAPI = "^4.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
